--- a/po/wesnoth-tb/uk.po
+++ b/po/wesnoth-tb/uk.po
@@ -1,55 +1,52 @@
-# #-#-#-#-#  wesnoth-tb.cpp.pot (wesnoth VERSION)  #-#-#-#-#
 # Ukrainian translations for wesnoth package.
 # Copyright (C) 2012 Wesnoth development team
-# This file is distributed under the same license as the wesnoth package.
+# This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2012-08-18 09:52+0200\n"
+"PO-Revision-Date: 2012-08-18 19:30+0200\n"
+"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  wesnoth-tb.cpp.pot (PACKAGE VERSION)  #-#-#-#-#\n"
-"#-#-#-#-#  wesnoth-tb.wml.pot (PACKAGE VERSION)  #-#-#-#-#\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:12
 msgid "A Tale of Two Brothers"
-msgstr ""
+msgstr "Розповідь про Двох Братів"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:13
 msgid "AToTB"
-msgstr ""
+msgstr "РпДБ"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:17
 msgid "(Beginner)"
-msgstr ""
+msgstr "(Початківець)"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:17
 msgid "Horseman"
-msgstr ""
+msgstr "Вершник"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:18
 msgid "(Challenging)"
-msgstr ""
+msgstr "(Складно)"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:18
 msgid "Knight"
-msgstr ""
+msgstr "Лицар"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:19
@@ -59,46 +56,50 @@ msgid ""
 "as planned. Can you help?\n"
 "\n"
 msgstr ""
+"Злий чаклун наводить жах на невелике село Магре і його жителів. Місцевий "
+"чарівник покликав на допомогу свого брата, але все пішло не так, як вони "
+"задумали. Чи зумієте ви допомогти?\n"
+"\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:21
 msgid "(Novice level, 4 scenarios.)"
-msgstr ""
+msgstr "(Для новачків, 4 сценарії.)"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:28
 msgid "Campaign Design"
-msgstr ""
+msgstr "Розробка кампанії"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:37
 msgid "Prose and Story Edits"
-msgstr ""
+msgstr "Проза та історія"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:46
 msgid "Campaign Maintenance"
-msgstr ""
+msgstr "Підтримка кампанії"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:52
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Графіка та дизайн"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:68
 msgid "Miscellaneous"
-msgstr ""
+msgstr "Інше"
 
 #. [entry]
 #: data/campaigns/Two_Brothers/_main.cfg:82
 msgid "And special thanks to everyone else who I forgot to mention."
-msgstr ""
+msgstr "Автор також дякує всім, кого забув згадати."
 
 #. [scenario]: id=01_Rooting_Out_a_Mage
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:4
 msgid "Rooting Out a Mage"
-msgstr ""
+msgstr "Викорінення мага"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:50
@@ -170,7 +171,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:86
 msgid "Slay Mordak, the evil mage"
-msgstr ""
+msgstr "Знищіть Мордака, злого мага"
 
 #. [objective]: condition=lose
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:90
@@ -183,7 +184,7 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:55
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:253
 msgid "Death of Arvith"
-msgstr ""
+msgstr "Смерть Арвіта"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:113
@@ -192,58 +193,58 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:84
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:52
 msgid "Arvith"
-msgstr ""
+msgstr "Арвіт"
 
 #. [unit]: id=Baran, type=Red Mage
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:123
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:652
 msgid "Baran"
-msgstr ""
+msgstr "Б'ярн"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:143
 msgid "Alwyn"
-msgstr ""
+msgstr "Альвін"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:144
 msgid "Brent"
-msgstr ""
+msgstr "Брент"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:145
 msgid "Cadell"
-msgstr ""
+msgstr "Каделл"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:146
 msgid "Dannen"
-msgstr ""
+msgstr "Даннен"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:147
 msgid "Efran"
-msgstr ""
+msgstr "Ефран"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:148
 msgid "Faren"
-msgstr ""
+msgstr "Фарен"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:151
 msgid "Tarek"
-msgstr ""
+msgstr "Тарек"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:152
 msgid "Hann"
-msgstr ""
+msgstr "Ханн"
 
 #. [side]: type=Knight, id=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:153
 msgid "Magrid"
-msgstr ""
+msgstr "Магрід"
 
 #. [side]: type=Knight, id=Arvith
 #. [side]: type=Longbowman, id=Reeve Hoban
@@ -253,12 +254,12 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:92
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:135
 msgid "Humans"
-msgstr ""
+msgstr "Люди"
 
 #. [side]: type=Dark Sorcerer, id=Mordak
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:170
 msgid "Mordak"
-msgstr ""
+msgstr "Мордак"
 
 #. [side]
 #. [side]: type=Dark Sorcerer, id=Mordak
@@ -269,22 +270,22 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:154
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:122
 msgid "Enemies"
-msgstr ""
+msgstr "Вороги"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:203
 msgid "Greetings, brother, and welcome home."
-msgstr ""
+msgstr "Вітаю, брате, і ласкаво прошу додому."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:207
 msgid "Hail."
-msgstr ""
+msgstr "Привіт."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:211
 msgid "Is that all, Arvith? I understand, but..."
-msgstr ""
+msgstr "Це все, Арвіт? Я розумію, але..."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:215
@@ -568,42 +569,42 @@ msgstr ""
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:397
 msgid "Sithrak"
-msgstr ""
+msgstr "Сітрак"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:398
 msgid "Eleben"
-msgstr ""
+msgstr "Елебен"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:399
 msgid "Jarlom"
-msgstr ""
+msgstr "Жаром"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:400
 msgid "Hamik"
-msgstr ""
+msgstr "Хамік"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:403
 msgid "Akranbral"
-msgstr ""
+msgstr "Акранбрал"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:404
 msgid "Drakanal"
-msgstr ""
+msgstr "Драканал"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:405
 msgid "Xaskanat"
-msgstr ""
+msgstr "Ксасканат"
 
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:406
 msgid "Katklagad"
-msgstr ""
+msgstr "Катклагад"
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:429
@@ -635,7 +636,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:451
 msgid "Brena"
-msgstr ""
+msgstr "Брена"
 
 #. [message]: speaker=Brena
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:460
@@ -776,7 +777,7 @@ msgstr ""
 #. [side]: type=Dark Sorcerer, id=Rotharik
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:94
 msgid "Rotharik"
-msgstr ""
+msgstr "Ротарік"
 
 #. [unit]: id=Guard2_leader, type=Rogue
 #. [unit]: id=Guard_leader, type=Assassin
@@ -791,12 +792,12 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:469
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:478
 msgid "Guard"
-msgstr ""
+msgstr "Охоронець"
 
 #. [unit]: id=Knago-Brek, type=Orcish Warrior
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:160
 msgid "Knago-Brek"
-msgstr ""
+msgstr "Кнаго-Брек"
 
 #. [unit]: type=Orcish Grunt
 #. [unit]: type=Orcish Warrior
@@ -805,12 +806,12 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:186
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:194
 msgid "Castle Guard"
-msgstr ""
+msgstr "Страж замку"
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:208
 msgid "Rescue Baran"
-msgstr ""
+msgstr "Врятуй Б'ярна"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:307
@@ -827,32 +828,32 @@ msgstr ""
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:316
 msgid "The password is"
-msgstr ""
+msgstr "Пароль:"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:318
 msgid "$first_password_1|!"
-msgstr ""
+msgstr "$first_password_1|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:324
 msgid "$first_password_2|!"
-msgstr ""
+msgstr "$first_password_2|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:330
 msgid "$first_password_3|!"
-msgstr ""
+msgstr "$first_password_3|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:336
 msgid "$first_password_4|!"
-msgstr ""
+msgstr "$first_password_4|!"
 
 #. [message]: speaker=Guard_leader
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:352
 msgid "Pass, friend."
-msgstr ""
+msgstr "Проходь, друже."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:367
@@ -864,7 +865,7 @@ msgstr ""
 #. [message]: speaker=Guard_leader
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:378
 msgid "Wrong! Die!"
-msgstr ""
+msgstr "Невірно! Помри!"
 
 #. [message]: speaker=Knago-Brek
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:392
@@ -918,22 +919,22 @@ msgstr ""
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:500
 msgid "$second_password_1|!"
-msgstr ""
+msgstr "$second_password_1|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:506
 msgid "$second_password_2|!"
-msgstr ""
+msgstr "$second_password_2|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:512
 msgid "$second_password_3|!"
-msgstr ""
+msgstr "$second_password_3|!"
 
 #. [option]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:518
 msgid "$second_password_4|!"
-msgstr ""
+msgstr "$second_password_4|!"
 
 #. [message]: speaker=Guard2_leader
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:533
@@ -1131,18 +1132,18 @@ msgstr ""
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:59
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:257
 msgid "Death of Baran"
-msgstr ""
+msgstr "Смерть Б'ярна"
 
 #. [side]: type=Orcish Warlord, id=Tairach
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:100
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:63
 msgid "Tairach"
-msgstr ""
+msgstr "Тайрач"
 
 #. [side]: type=Longbowman, id=Reeve Hoban
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:129
 msgid "Reeve Hoban"
-msgstr ""
+msgstr "Суддя Хобан"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:160
