--- a/po/wesnoth/uk.po
+++ b/po/wesnoth/uk.po
@@ -7,10 +7,10 @@
 # Igor Paliychuk <mansonigor@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-04-30 18:45+0300\n"
+"POT-Creation-Date: 2012-08-18 09:52+0200\n"
+"PO-Revision-Date: 2012-08-18 19:33+0200\n"
 "Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: uk\n"
@@ -563,10 +563,8 @@ msgstr "Турецький переклад"
 
 #. [about]
 #: data/core/about.cfg:2801
-#, fuzzy
-#| msgid "Romanian Translation"
 msgid "Ukrainian Translation"
-msgstr "Румунський переклад"
+msgstr "Український переклад"
 
 #. [about]
 #: data/core/about.cfg:2814
@@ -1779,6 +1777,13 @@ msgid ""
 "Tanaoa,Tangaloa,Tangaroa,Thaumas,Tikitiki,Tini,Tinilau,Tinirau,Toniwha,"
 "Triton,Vizi,Vodnik,Vourukasa"
 msgstr ""
+"Абзу,Абсу,Аігайон,Аластін,Апалала,Апам,Апсу,Аремата,Атлауа,Атлахуа,Барінтус,"
+"Візі,Воднік,Вурукаса,Дахан,Джамм,Джін,Ділан,Ікатере,Кінілау,Кулуллу,Лабуна,"
+"Лаут,Лір,Ллір,Лудд,Макара,Мауі,Меліцертес,Мімір,Натат,Нептун,Нерейос,Нетунс,"
+"Нечтан,Нуада,Нудд,Нудіммуд,Нун,Ньорд,Океанос,Океанус,Понтус,Попоа,Посейдон,"
+"Протеус,Раджа,Рау,Роруа,Рюджін,Сінілау,Сісіутл,Сцілла,Тагалоа,Танаоа,"
+"Тангалоа,Тангароа,Таумас,Тікітікі,Тіні,Тінілау,Тінірау,Тоніва,Трітон,Фаро,"
+"Форціс,Хабаєк,Елкмар,Ембер,Енкі"
 
 #: data/core/macros/names.cfg:52
 msgid ""
@@ -1801,6 +1806,12 @@ msgid ""
 "Sekol,Silas,Skell,Skepz,Slell,Snol,Soill,Sorkol,Srell,Trixoz,Vilail,Vissal,"
 "Vlanis,Xabrak,Xamalel,Xinas,Xnamos,Xopkon,Zalsp,Zlek,Zpsek,Zsekp"
 msgstr ""
+"Абраксас,Аксмейл,Алейсс,Амейл,Бланал,Блеї,Бло,Бресс,Брісс,Вілейл,Віссал,"
+"Вланіс,Гаксмол,Гріам,Грісс,Гріссілеї,Залсп,Злек,Зпсек,Зсекп,Іналос,Інеї,"
+"Іссал,Кзап,Клезел,Крас,Крезкпс,Ксабрак,Ксамалел,Ксамос,Ксопкон,Ламаісс,Ламеї,"
+"Лекспек,Лінесс,Лобор,Малінос,Мейссол,Мілбор,Мілеї,Нілдлосс,Окспеї,Пзакп,"
+"Поніаз,Псел,Псон,Реї,Саксіл,Саксріреї,Сассал,Сєкол,Сілас,Скелл,Скепз,Слєлл,"
+"Снол,Сойлл,Соркол,Срелл,Тіксоз,Харксос,Хейлосс,Хейносс,Хузел"
 
 #: data/core/macros/names.cfg:57
 msgid ""
@@ -1812,6 +1823,13 @@ msgid ""
 "Vissalai,Vlanissa,Xabrak,Xamalia,Xina,Xinasia,Xnamas,Xopkne,Zalsp,Zlek,Zpsek,"
 "Zsekp"
 msgstr ""
+"Аксмаліа,Аліасс,Амейліс,Бланалей,Блей,Блі,Бліана,Брассас,Бріссал,Вілейла,"
+"Віссалей,Вланісса,Гаксмейл,Гріама,Грісса,Гріссілей,Залсп,Злек,Зпекп,Зпсек,"
+"Зсекп,Іналей,Іней,Іссалей,Кзап,Клез,Крас,Крезкпс,Ксабрак,Ксамалія,Ксіна,"
+"Ксінасіа,Кснамас,Ксопкне,Ламей,Ламейсса,Лекспек,Ліабра,Лілін,Лінасса,Маліна,"
+"Мейсса,Міла,Мілбра,Нілдласі,Окспел,Пзакп,Поніазал,Псал,Псен,Ріаа,Саксіала,"
+"Саксріріаа,Сассалія,Сек,Сзак,Скал,Скепз,Сла,Снелія,Солл,Срак,Срал,Тріксзед,"
+"Хайла,Хайна,Харксіас,Хузі"
 
 #: data/core/macros/names.cfg:61
 msgid ""
@@ -1863,6 +1881,39 @@ msgid ""
 "Vrogar,Vrogor,Vrolo,Vrong,Vrorg,Vrork,Vrudish,Vrugdush,Vrulg,Vrung,Vruol,"
 "Vrurg,Vrurt,Vruurk,Vudish,Vuk,Vulg,Vulo,Vunak,Vurag,Vurbag,Vurg,Vushnak"
 msgstr ""
+"Бараг,Багдіш,Бадуш,Бараг,Барбаг,Барт,Башнак,Бідіш,Бідуш,Бік,Білг,Біло,Бінак,"
+"Бінк,Біол,Біло,Бірт,Богар,Богдіш,Богдуш,Богор,Борог,Бок,Болг,Бонг,Борг,Борк,"
+"Борт,Бошнак,Бугдіш,Бугдіш,Будуш,Бук,Бунак,Бунг,Бунк,Бураг,Бург,Бурк,Буурк,"
+"Вадаш,Вадіш,Вадуш,Вадуш,Вак,Вак,Вало,Ванк,Вараг,Варбаг,Вігар,Вігдіш,Вігор,"
+"Вілг,Віло,Вінк,Віраг,Вірт,Вішнак,Вогдіш,Вогор,Вонак,Вонг,Ворг,Ворк,Воурк,"
+"Вошнак,Врагар,Врагдуш,Врагор,Врадаш,Врало,Вранг,Врарбаг,Врарг,Врарг,Врарт,"
+"Враурк,Враурк,Враурк,Врігор,Врідаш,Врідіш,Врік,Врінак,Врінг,Врірт,Вріурк,"
+"Врішнак,Врогар,Врогор,Вродаш,Вродіш,Вроло,Вронг,Врорг,Врорк,Врорк,Вругдуш,"
+"Врудіш,Врулг,Врунг,Вруол,Врург,Врурт,Вруурк,Вудіш,Вук,Вулг,Вуло,Вунак,Вураг,"
+"Вурбаг,Вург,Вушнак,Гагар,Гагдуш,Гагор,Гадаш,Гало,Ганак,Ганк,Гаол,Гараг,"
+"Гашнак,Гігор,Гігор,Гігор,Гінак,Гінг,Гінк,Гірт,Гогдіш,Гогдуш,Гонг,Горк,Горт,"
+"Гошнак,Гошнак,Грагар,Грагор,Градаш,Грак,Гралг,Грало,Гранак,Граол,Грарбаг,"
+"Грігар,Грігор,Грідаш,Грідіш,Грідуш,Грілг,Гріло,Грінк,Гріраг,Грірг,Грірк,"
+"Грішнак,Грогар,Грогдіш,Гродіш,Грок,Гролг,Гронг,Гронк,Грораг,Грорг,Грорк,"
+"Грорт,Грошнак,Гругар,Гругдіш,Гругдуш,Грудаш,Грук,Груло,Грунк,Груол,Грург,"
+"Грурк,Грурт,Груурк,Гугдіш,Гугдуш,Гулг,Гуло,Гунак,Гурбаг,Гурт,Гушнак,Ерагдіш,"
+"Ерагдуш,Ерагор,Ерагор,Ерагор,Ерадаш,Ерадіш,Еранак,Еранг,Ерараг,Ерарг,Ерарт,"
+"Ерігдуш,Ерік,Ерінак,Еріол,Еріраг,Ерірбаг,Ерірг,Ерірт,Еріурк,Еріурк,Ерішнак,"
+"Ерогдіш,Ерогдуш,Ерок,Еронг,Еронк,Еронк,Еронк,Еронк,Ерорбаг,Еругар,Еругдуш,"
+"Ерудіш,Ерудуш,Еруло,Ерунк,Еруол,Ерураг,Ерураг,Еруурк,Пагдіш,Пагор,Палг,Пало,"
+"Паол,Параг,Пашнак,Пігдіш,Пігдуш,Підуш,Пілг,Пінак,Пінк,Пірбаг,Погдіш,Подаш,"
+"Подіш,Подуш,Полг,Порбаг,Порг,Порк,Порт,Пошнак,Прагдуш,Прагор,Прадіш,Пралг,"
+"Прало,Пранг,Праол,Прараг,Прарбаг,Прарбаг,Прарг,Прарк,Прарт,Праурк,Прашнак,"
+"Прігар,Прігдіш,Прігор,Прідіш,Прілг,Пріло,Прінак,Пріол,Прірбаг,Прірг,Прірт,"
+"Пріурк,Продаш,Продіш,Продуш,Пролг,Проло,Пронак,Пронг,Пронк,Проол,Проурк,"
+"Пругар,Пругдіш,Прудіш,Прук,Прунак,Прунк,Прург,Прурк,Пруурк,Пук,Пулг,Пуло,"
+"Пунак,Пунг,Пунк,Пураг,Пурбаг,Пург,Пуурк,Рагар,Рагдіш,Радаш,Рак,Рак,Рак,Ранг,"
+"Ранк,Раол,Рараг,Рарбаг,Рарк,Раурк,Рашнак,Рігор,Рік,Рілг,Рінак,Рінк,Рірг,Рірк,"
+"Рогдіш,Родіш,Родуш,Рок,Роло,Ронак,Ругар,Ругдіш,Рудаш,Рук,Рунг,Руол,Рураг,"
+"Рушнак,Хагар,Хагдуш,Хагор,Хадаш,Хадіш,Хадуш,Хак,Халг,Ханк,Хашнак,Хашнак,"
+"Хігдуш,Хідаш,Хідіш,Хідуш,Хілг,Хінак,Хінг,Хінк,Хіол,Хіраг,Хірг,Хогар,Хогор,"
+"Ходуш,Хонг,Хоол,Хорбаг,Хорк,Хорт,Хошнак,Хугор,Худаш,Худіш,Хук,Хулг,Хуло,Хунк,"
+"Хуол,Хураг,Хурбаг,Хурк,Хуурк,Хушнак"
 
 #: data/core/macros/names.cfg:69
 msgid ""
@@ -2159,18 +2210,18 @@ msgstr "Болото $name|а,трясовина $name,болото $name"
 #. [language]
 #: data/english.cfg:30
 msgid "$name|bury,$name|ham,$name|ton,$name|bury"
-msgstr ""
+msgstr "$name|бері,$name|хам,$name|тон,$name|бері"
 
 #. [language]
 #: data/english.cfg:31
 msgid "$name|harbor,$name|port,$lake|port,$lake|harbor"
-msgstr ""
+msgstr "$name|харбор,$name|порт,$lake|порт,$lake|харбор"
 
 #. [language]
 #: data/english.cfg:32
 msgid ""
 "$name|ham,$name|ford,$name|cross,$river|ford,$river|cross,$name on river"
-msgstr ""
+msgstr "$name|хам,$name|форд,$name|крос,$river|форд,$river|крос,$name на річці"
 
 #. [language]
 #: data/english.cfg:33
@@ -2178,11 +2229,13 @@ msgid ""
 "$river|bridge,$river|bridge,$river|bridge,$name|ham,$name|bridge,$bridge|ham,"
 "$bridge|ton"
 msgstr ""
+"$river|брідж,$river|брідж,$river|брідж,$name|хам,$name|брідж,$bridge|хам,"
+"$bridge|тон"
 
 #. [language]
 #: data/english.cfg:34
 msgid "$name|ham,$name|ton,$name|field"
-msgstr ""
+msgstr "$name|хам,$name|тон,$name|філд"
 
 #. [language]
 #: data/english.cfg:35
@@ -2190,33 +2243,36 @@ msgid ""
 "$name|ham,$name|ton,$name|wood,$name Forest,$forest|wood,$forest|ham,$forest|"
 "ton"
 msgstr ""
+"$name|хам,$name|тон,$name|вуд,$name Ліс,$forest|вуд,$forest|хам,$forest|тон"
 
 #. [language]
 #: data/english.cfg:36
 msgid "$name|ham,$name|bury,$name|ton,$name|hill,$name|crest"
-msgstr ""
+msgstr "$name|хам,$name|бері,$name|тон,$name|хілл,$name|крест"
 
 #. [language]
 #: data/english.cfg:37
 msgid "$mountain|mont,$mountain|cliff,$mountain|bury,$mountain|ham"
-msgstr ""
+msgstr "$mountain|монт,$mountain|кліф,$mountain|бюрі,$mountain|хам"
 
 #. [language]
 #: data/english.cfg:38
 msgid ""
 "$name|ham,$name|bury,$name|ton,$name|mont,$name|mont,$name|cliff,$name|cliff"
 msgstr ""
+"$name|хам,$name|бері,$name|тон,$name|монт,$name|монт,$name|кліф,$name|кліф"
 
 #. [language]
 #: data/english.cfg:39
 msgid ""
 "$road|’s Rest,$road|’s Waypoint,$road|bury,$road|ham,$name|bury,$name|ham"
 msgstr ""
+"Кінець $road,Перехрестя $road,$road|бері,$road|хам,$name|бері,$name|хам"
 
 #. [language]
 #: data/english.cfg:40
 msgid "$name|bury,$name|ham,$name|ton,$swamp|bury,$swamp|ham,$swamp|ton,"
-msgstr ""
+msgstr "$name|бері,$name|хам,$name|тон,$swamp|бері,$swamp|хам,$swamp|тон,"
 
 #. [language]
 #: data/english.cfg:43
@@ -2348,7 +2404,6 @@ msgstr "<i>― Король Конрад, 536 рік Е.В.</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:16
-#, fuzzy
 msgid ""
 "The encircling tactic is very powerful, particularly against fast opponents. "
 "By placing two units on opposite sides of an enemy, their zones of control "
@@ -2358,7 +2413,7 @@ msgstr ""
 "Оточення - дуже сильна тактика, особливо проти швидких противників. Якщо Ви "
 "поставите двох своїх бійців з різних сторін від противника, їх зони контролю "
 "не дадуть йому піти далі, ніж на одне поле. На жаль, щоб не дати рухатись "
-"авангардистам, Ви повинні оточити їх повністю."
+"авангардистам, ви повинні оточити їх повністю."
 
 #. [tip]
 #: data/hardwired/tips.cfg:17 data/hardwired/tips.cfg:129
@@ -2545,7 +2600,6 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:72
-#, fuzzy
 msgid ""
 "Units of level one and higher have a <i>Zone of Control</i> in the six hexes "
 "around them. If a unit moves into an enemy’s zone of control, it may not "
@@ -3606,14 +3660,14 @@ msgstr "Телепорт не вдався! Пункт призначення н
 #: src/actions.cpp:3520
 msgid "Part of 'Units sighted! (...)' sentence^1 friendly"
 msgid_plural "$friends friendly"
-msgstr[0] "1 дружній"
+msgstr[0] "$friends дружній"
 msgstr[1] "$friends дружніх"
 msgstr[2] "$friends дружніх"
 
 #: src/actions.cpp:3521
 msgid "Part of 'Units sighted! (...)' sentence^1 enemy"
 msgid_plural "$enemies enemy"
-msgstr[0] "1 ворожий"
+msgstr[0] "$enemies ворожий"
 msgstr[1] "$enemies ворожих"
 msgstr[2] "$enemies ворожих"
 
@@ -3624,14 +3678,14 @@ msgstr "Бачу війська! ($friendphrase, $enemyphrase)"
 #: src/actions.cpp:3526
 msgid "Friendly unit sighted"
 msgid_plural "$friends friendly units sighted"
-msgstr[0] "Бачу дружнього бійця"
+msgstr[0] "Бачу $friends дружнього бійця"
 msgstr[1] "Бачу $friends дружніх бійця"
 msgstr[2] "Бачу $friends дружніх бійців"
 
 #: src/actions.cpp:3530
 msgid "Enemy unit sighted!"
 msgid_plural "$enemies enemy units sighted!"
-msgstr[0] "Бачу ворога!"
+msgstr[0] "Бачу $enemies ворога!"
 msgstr[1] "Бачу $enemies ворога!"
 msgstr[2] "Бачу $enemies ворогів!"
 
@@ -4949,7 +5003,7 @@ msgstr "Закликати"
 #: src/menu_events.cpp:1004
 msgid "You must have at least 1 gold piece to recall a unit"
 msgid_plural "You must have at least $cost gold pieces to recall a unit"
-msgstr[0] "У Вас має бути хоча би 1 золотий для заклику бійця"
+msgstr[0] "У Вас має бути хоча би $cost золотий для заклику бійця"
 msgstr[1] "У Вас має бути хоча би $cost золотих для заклику бійця"
 msgstr[2] "У Вас має бути хоча би $cost золотих для заклику бійця"
 
@@ -5625,16 +5679,12 @@ msgid "prompt^Command:"
 msgstr "Команада:"
 
 #: src/mouse_events.cpp:726
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
 msgstr ""
-"Ви не можете прибрати лідера з цитаделі поки у Вас залишаються заплановані "
-"бійці."
+"Ви не можете прибрати лідера з цитаделі поки у вас ще є заплановані бійці чи "
+"виклики."
 
 #: src/mouse_events.cpp:843 src/mouse_events.cpp:923
 msgid "Attack Enemy"
@@ -6049,7 +6099,7 @@ msgstr "Бонус ходів: "
 
 #: src/multiplayer_create.cpp:422
 msgid "Reservoir: "
-msgstr ""
+msgstr "Запас: "
 
 #: src/multiplayer_create.cpp:427
 msgid "Action bonus: "
@@ -6982,8 +7032,8 @@ msgstr "$effect_description за рівень"
 msgid "damage"
 msgid_plural "damage"
 msgstr[0] "пошкодження"
-msgstr[1] ""
-msgstr[2] ""
+msgstr[1] "пошкодження"
+msgstr[2] "пошкодження"
 
 #: src/unit_types.cpp:203 src/unit_types.cpp:270
 msgid "strike"
