updated French translation

--- a/po/wesnoth-utbs/fr.po
+++ b/po/wesnoth-utbs/fr.po
@@ -1,12 +1,14 @@
-# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
+#
+# Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-01-09 02:27+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
-"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
+"POT-Creation-Date: 2012-08-18 09:52+0200\n"
+"PO-Revision-Date: 2012-08-20 20:39+0200\n"
+"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
+"Language-Team: français <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1380,10 +1382,8 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:513
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:658
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Dois-je prendre cette épée ?"
+msgstr "Dois-je prendre cet anneau ?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:515
@@ -1408,10 +1408,8 @@ msgstr ""
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:551
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:693
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "Non, je pense que quelqu'un d'autre devrait la porter."
+msgstr "Non, je pense que quelqu'un d'autre devrait le porter."
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:576
@@ -1919,9 +1917,9 @@ msgstr ""
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1691
 #, fuzzy
-#| msgid "No, I think someone else should wield it."
+#| msgid "No, I think someone else should wear it."
 msgid "No, I think someone else should take it."
-msgstr "Non, je pense que quelqu'un d'autre devrait la porter."
+msgstr "Non, je pense que quelqu'un d'autre devrait le porter."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1733
