eclipse plugin: Add '#ifver' and '#ifnver' to the WML grammar

--- a/utils/umc_dev/changelog
+++ b/utils/umc_dev/changelog
@@ -1,5 +1,9 @@
 Eclipse plugin changelog
 
+2.0.2
+	* Added the #ifver and #ifnver to the recognized WML
+	* Fixed the coloring of the #else keyword
+
 2.0.1
 	* Fixed the ``WML Tools" menu not appearing on the projects context menu.
 	* Fixed the highlighting of the #endif preprocessor define.
